# skyprodz

./: main.py  pyproject.toml
data/: cbr.xml
src/: __init__.py  config_log.py  currency.py  decorators.py  generators.py  mask.py  processing.py  utils.py  widget.py
test/: __init__.py  test_currency.py  test_decorators.py  test_func.py  test_generators.py  test_mask.py  test_processing.py  test_utils.py  test_widget.py
test_txt/: t.txt  t2.txt
